2006-10-14  Marcus Meissner  <marcus@jet.franken.de>
	
	* library.c: removed unused variable j
		The Canon fast retrieval seems to be a bit flawed
		on the IXUS 55, so add some checking.

2006-10-13  Marcus Meissner  <marcus@jet.franken.de>

	* ptp.c,ptp.h,ptp-pack.c,library.c:

	  Implement CANON fast directory retrieval (just one 
	  call for all objects). Should give speed-up if
	  lots of files are on the camera.
	  (Apparently needs Canon released in/after 2005).

	* library.c: Implemented "NEW" flag handling for newer
	  Canons, like with Canon driver.

	* library.c: Do not retrieve storage info unnecessary on
	  / folder listing. The information is not used at all.

	* ptp.h/ptp-pack.c: Fixed typo in StandardVersion.

	* library.c: Implemented "NEW" flag handling also for
	  older Canons using the older directory retrieval method.

2006-10-12  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Corrected SD630 name (its PowerShot brand),
	  added Digital IXUS 65 alias for same.

2006-10-11  Marcus Meissner  <marcus@jet.franken.de>

	* ptp.c,ptp.h: translate opcodes to strings (merged from libmtp).

	* ptp.c, ptp.h, library.c: Sync CANON opcode names with list
	  gleamed from camera access library.

	* ptp.[ch]: Get Canon wireless MAC address wrapper.

2006-10-10  Marcus Meissner  <marcus@jet.franken.de>
	
	* library.c: Added Canon Digital IXUS Wireless (same as SD430)
	  Marked them as capture capable, but capture mode not supported
	  yet.

	* ptp.c/ptp.h: Added "Request Direct Transfer" opcode for newer Canons.
	* ptp.c/ptp.h: Added "Get Direct Transfer Entries" opcode for newer Canons.
	* ptp.c: Read event in multiple parts (necessary for Canons who only read 8 
	  byte per interrupt).

2006-10-05  Marcus Meissner  <marcus@jet.franken.de>

	* config.c: Do not call Nikon commands on Canons.
	* library.c,config.c,ptp-private.h: 
	  Initialize Canon capture if we do "to RAM" capture
	  on canons.

2006-09-30  Marcus Meissner  <marcus@jet.franken.de>
	